fix: sidebar z-index

--- a/shell/app/layout/pages/page-container/components/sidebar/index.scss
+++ b/shell/app/layout/pages/page-container/components/sidebar/index.scss
@@ -64,7 +64,7 @@
       position: absolute;
       left: -243px;
       width: 216px;
-      z-index: 2;
+      z-index: 9;
       background: $color-bg;
       padding: 16px;
       height: calc(100vh - 36px - 36px);
